--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "postcss src/styles.css --outpod css/styles.css",
+    "watch": "postcss src/styles.css --outpod css/styles.css --watch"
   },
   "keywords": [],
   "author": "",
