--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "autoprefixer": "^10.3.7",
     "postcss": "^8.3.9",
     "postcss-cli": "^9.0.1"
+  },
+  "dependencies": {
+    "tailwindcss": "^2.2.16"
   }
 }
